Fix scrollbar in Sports category tabs. (#662)
Fix scrollbar in Sports category tabs.

--- a/src/assets/styles/components/_common.scss
+++ b/src/assets/styles/components/_common.scss
@@ -61,7 +61,7 @@ a:focus {
   max-width: 1920px;
   min-width: 1380px;
   margin-top: 80px;
-  padding: 0 13px 0 0;
+  padding: 0 3px 0 0;
 }
 .mobile-container {
   margin-top: 60px;
