--- a/src/assets/styles/components/_tabs.scss
+++ b/src/assets/styles/components/_tabs.scss
@@ -191,6 +191,11 @@
     flex-wrap: nowrap;
     white-space: nowrap;
     max-width: 100%;
+    overflow: hidden;
+
+    .mobile-container & {
+      overflow: auto;
+    }
   }
 }
 
